--- a/src/main/resources/typingtester/App.fxml
+++ b/src/main/resources/typingtester/App.fxml
@@ -6,13 +6,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="exampleproject.ExampleProjectController">
+<AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="typingtester.typingTesterController">
    <children>
       <Button layoutX="271.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleButtonClick" text="Kalkuler" />
       <TextField fx:id="firstNumber" layoutX="107.0" layoutY="133.0" />
       <TextField fx:id="secondNumber" layoutX="344.0" layoutY="133.0" />
       <TextField fx:id="operator" layoutX="288.0" layoutY="133.0" prefHeight="25.0" prefWidth="26.0" />
       <Label fx:id="result" layoutX="257.0" layoutY="244.0" />
+      <Label fx:id="test" layoutX="300.0" layoutY="300.0" />
       <Text layoutX="170.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tall 1" />
       <Text layoutX="405.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tall 2" />
       <Text layoutX="289.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="+-/*" />
