--- a/src/main/resources/typingtester/App.fxml
+++ b/src/main/resources/typingtester/App.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="typingtester.typingTesterController">
+<AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="typingtester.TypingTesterController">
    <children>
-      <Button layoutX="271.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleButtonClick" text="Kalkuler" />
+      <Button layoutX="271.0" layoutY="188.0" mnemonicParsing="false" onAction="#startTest" text="Start Test" />
       <TextField fx:id="firstNumber" layoutX="107.0" layoutY="133.0" />
       <TextField fx:id="secondNumber" layoutX="344.0" layoutY="133.0" />
       <TextField fx:id="operator" layoutX="288.0" layoutY="133.0" prefHeight="25.0" prefWidth="26.0" />
