--- a/src/main/resources/typingtester/Stats.fxml
+++ b/src/main/resources/typingtester/Stats.fxml
@@ -8,5 +8,6 @@
 
 <AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="typingtester.TypingTesterController">
    <children>
+      <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#enterTypingTest" text="Typing Test" />
    </children>
 </AnchorPane>
