--- a/src/main/resources/typingtester/TypingTest.fxml
+++ b/src/main/resources/typingtester/TypingTest.fxml
@@ -6,10 +6,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="typingtester.TypingTesterController">
+<AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="typingtester.TypingTestController">
    <children>
-      <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#enterStats" text="Stats" />
+      <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#enterStats" text="Stats" focusTraversable="false" />
       <Label fx:id="test" layoutX="300.0" layoutY="200.0" />
+      <Label fx:id="written" layoutX="300.0" layoutY="150.0" />
       <Label fx:id="result" layoutX="300.0" layoutY="100.0" />
       <Label fx:id="timeleft" layoutX="100.0" layoutY="100.0" />
    </children>
