--- a/src/main/resources/typingtester/TypingTest.fxml
+++ b/src/main/resources/typingtester/TypingTest.fxml
@@ -12,9 +12,13 @@
       <Label fx:id="test" layoutX="0.0" layoutY="300.0" >
          <style>
             -fx-font-size:30;
-            -fx-text-alignment: right;
             -fx-font-family: monospace;
             -fx-font-weight: bold;
+         </style>
+      </Label>
+      <Label layoutX="500.0" layoutY="292" text="|" >
+         <style>
+            -fx-font-size:30;
          </style>
       </Label>
       <Label fx:id="result" layoutX="300.0" layoutY="100.0" />
