Swapped colors on left side

--- a/src/main/resources/typingtester/TypingTest.fxml
+++ b/src/main/resources/typingtester/TypingTest.fxml
@@ -12,7 +12,7 @@
    </style>
    <children>
       <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#enterStats" text="Stats" focusTraversable="false" />
-      <Label fx:id="correctWords" layoutX="0.0" layoutY="300.0" >
+      <Label fx:id="whiteWords" layoutX="0.0" layoutY="300.0" >
          <style>
             -fx-font-size:30;
             -fx-font-family: monospace;
@@ -20,7 +20,7 @@
             -fx-text-fill: white;
          </style>
       </Label>
-      <Label fx:id="incorrectWords" layoutX="0.0" layoutY="300.0" >
+      <Label fx:id="blackWords" layoutX="0.0" layoutY="300.0" >
          <style>
             -fx-font-size:30;
             -fx-font-family: monospace;
