--- a/src/main/resources/typingtester/TypingTest.fxml
+++ b/src/main/resources/typingtester/TypingTest.fxml
@@ -11,7 +11,7 @@
       -fx-background-color: #0d3667;
    </style>
    <children>
-      <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#enterStats" text="Stats" focusTraversable="false" />
+      <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#enterProgress" text="Progress" focusTraversable="false" />
       <Label fx:id="whiteWords" layoutX="0.0" layoutY="300.0" >
          <style>
             -fx-font-size:30;
