--- a/src/main/resources/typingtester/Progress.fxml
+++ b/src/main/resources/typingtester/Progress.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -7,7 +9,29 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="typingtester.controller.ProgressController">
+   <style>
+      -fx-background-color: #0d3667;
+   </style>
    <children>
       <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#enterTypingTest" text="Typing Test" />
+
+      <Label fx:id="wpmRecord" layoutX="50.0" layoutY="100.0" >
+         <style>
+            -fx-font-weight: bold;
+            -fx-text-fill: white;
+         </style>
+      </Label>
+
+      <LineChart layoutX="200.0" layoutY="100.0">
+         <style>
+            -fx-background-color: #0d3667;
+         </style>
+         <xAxis>
+            <NumberAxis side="BOTTOM" />
+         </xAxis>
+         <yAxis>
+            <NumberAxis side="LEFT" />
+         </yAxis>
+      </LineChart>
    </children>
 </AnchorPane>
