--- a/src/main/resources/typingtester/Results.fxml
+++ b/src/main/resources/typingtester/Results.fxml
@@ -11,11 +11,21 @@
       -fx-background-color: #0d3667;
    </style>
    <children>
-      <Label fx:id="results" layoutX="257.0" layoutY="244.0" >
+      <Label fx:id="wpmAndAccuracy" layoutX="50.0" layoutY="100.0" >
+         <style>
+            -fx-font-weight: bold;
+            -fx-text-fill: white;
+            -fx-font-size:50;
+         </style>
+      </Label>
+      <Label fx:id="otherStats" layoutX="50.0" layoutY="500.0" >
          <style>
             -fx-font-weight: bold;
             -fx-text-fill: white;
          </style>
       </Label>
+      
+
+      <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#newTypingTest" text="New Test" focusTraversable="false" />
    </children>
 </AnchorPane>
