--- a/src/main/resources/typingtester/Progress.fxml
+++ b/src/main/resources/typingtester/Progress.fxml
@@ -22,6 +22,13 @@
          </style>
       </Label>
 
+      <Label fx:id="latestTests" layoutX="700.0" layoutY="100.0" >
+         <style>
+            -fx-font-weight: bold;
+            -fx-text-fill: white;
+         </style>
+      </Label>
+
       <LineChart layoutX="200.0" layoutY="100.0">
          <style>
             -fx-background-color: #0d3667;
