--- a/src/main/resources/typingtester/Progress.fxml
+++ b/src/main/resources/typingtester/Progress.fxml
@@ -15,11 +15,9 @@
    <children>
       <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#enterTypingTest" text="Typing Test" focusTraversable="false"/>
 
-      <Label fx:id="wpmRecord" layoutX="50.0" layoutY="100.0" styleClass="h1" >
-      </Label>
+      <Label fx:id="wpmRecord" layoutX="50.0" layoutY="100.0" styleClass="h1"/>
 
-      <Label fx:id="latestTests" layoutX="700.0" layoutY="100.0" styleClass="p">
-      </Label>
+      <Label fx:id="latestTests" layoutX="700.0" layoutY="100.0" styleClass="p"/>
 
       <LineChart fx:id="chart" layoutX="200.0" layoutY="100.0" createSymbols="false" legendVisible="false" >
          <xAxis>
