--- a/src/main/resources/typingtester/Progress.fxml
+++ b/src/main/resources/typingtester/Progress.fxml
@@ -9,18 +9,14 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="typingtester.controller.ProgressController">
-   <style>
-      -fx-background-color: #0d3667;
-   </style>
    <children>
       <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#enterTypingTest" text="Typing Test" focusTraversable="false"/>
 
-      <Label fx:id="wpmRecord" layoutX="50.0" layoutY="110.0" styleClass="p, center"/>
-      <Label fx:id="latestTests" layoutX="50.0" layoutY="200.0" styleClass="p, center"/>
+      <Label fx:id="progressStats" layoutX="50.0" layoutY="110.0" styleClass="p, center"/>
 
       <LineChart fx:id="chart" layoutX="300.0" layoutY="100.0" prefWidth="650.0"  createSymbols="false" legendVisible="false" >
          <xAxis>
-            <NumberAxis side="BOTTOM" />
+            <NumberAxis side="BOTTOM" tickLabelsVisible="false" opacity="0"/>
          </xAxis>
          <yAxis>
             <NumberAxis side="LEFT" />
