--- a/src/main/resources/typingtester/Progress.fxml
+++ b/src/main/resources/typingtester/Progress.fxml
@@ -10,19 +10,17 @@
 
 <AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="typingtester.controller.ProgressController">
    <children>
-      <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#enterTypingTest" text="Typing Test" focusTraversable="false"/>
+      <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#newTypingTest" text="Typing Test" focusTraversable="false"/>
 
       <Label fx:id="progressStats" layoutX="50.0" layoutY="110.0" styleClass="p, center"/>
 
-      <LineChart fx:id="chart" layoutX="300.0" layoutY="100.0" prefWidth="650.0"  createSymbols="false" legendVisible="false" >
+      <LineChart fx:id="progressChart" layoutX="300.0" layoutY="100.0" prefWidth="650.0"  createSymbols="false" legendVisible="false" >
          <xAxis>
             <NumberAxis side="BOTTOM" tickLabelsVisible="false" opacity="0"/>
          </xAxis>
          <yAxis>
-            <NumberAxis side="LEFT" />
+            <NumberAxis side="LEFT" label="WPM" />
          </yAxis>
       </LineChart>
-
-
    </children>
 </AnchorPane>
