--- a/src/main/resources/typingtester/pages/TypingTest.fxml
+++ b/src/main/resources/typingtester/pages/TypingTest.fxml
@@ -9,7 +9,7 @@
 <AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="typingtester.controller.TypingTestController">
    <children>
       <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#enterProgress" text="Progress" focusTraversable="false" />
-      <Label fx:id="timeleft" layoutX="500" layoutY="200.0" />
+      <Label fx:id="timeLeft" layoutX="500" layoutY="200.0" />
       <Label fx:id="whiteWords" layoutX="0.0" layoutY="300.0" styleClass="whiteWords" />
       <Label fx:id="blackWords" layoutX="0.0" layoutY="300.0" styleClass="blackWords" />
       <Label layoutX="500.0" layoutY="292" text="|" styleClass="caret" />
